fix excel export and becklog request
